public/css/style.css
/* ... */
.proImgHolder .imageSelector a:after,
.cover-image-wrapper .imageSelector a:after{
	content: "";
	display: block;
	background: url(../images/cameraIcon.png) no-repeat 0 0;
	width: 35px;
	height: 28px;
	position: absolute;
	bottom: 6px;
	left: 6px;
}

.cover-image-wrapper .imageSelector a:hover:after{
	top: 10px;
	left: 10px;
}
.cover-image-wrapper .imageSelector a:after{
	top: 10px;
	left: 10px;
	bottom: auto;
}
/** profile middle container **/
#profile-middle-container-left-col{
    margin-top: 0px;
    background-color: #fff;
    -webkit-border-radius: 5px;
    -moz-border-radius: 5px;
    border-radius: 5px;
    padding: 10px 15px;
	box-shadow: 0px 0px 7px -2px #000;
}
.pg-body-item{
	border-bottom: 1px dashed #e9f0f4;
	padding-bottom: 10px;
	position: relative;
	margin-bottom: 15px;
}
.pg-section .pg-body-item:last-child{
	border: none;
}
.form-holder{
	position: relative;
}
.pg-profile-heading {
    border-bottom: 1px solid #dee6eb;
}
.pg-profile-heading h1 {
    font: 14px 'montserratregular', sans-serif;
    color: #59afe1;
    margin: 2px 0 9px 0;
}
.pg-section-container .pg-section {
    padding-top: 10px;
    padding-bottom: 35px;
    margin-bottom: 10px;
    font-size: 13px;
    line-height: 17px;
    color: #333;
    font-weight: normal;
}
#pg-profile-middle-container-left-col-details .pg-section-container .pg-section{
	padding-bottom: 0;
}
.pg-section-container .pg-header{
     position: relative;
     font-size: 26px;
     line-height: 30px;
     padding-right: 35px;
     margin-bottom: 0px;

 }

.pg-section-container .pg-header h3 {
    font-weight: lighter;
    font: 18px 'montserratsemi_bold', sans-serif;
    font-size: 18px;
    line-height: 18px;
    color: #2d5164;
    margin: 15px 0;
}
.pg-section .pg-edit-tools {
    position: absolute;
    top: 0;
    right: 35px;
    filter: progid:DXImageTransform.Microsoft.Alpha(Opacity=0);
    opacity: 0;
    -webkit-transition: opacity 0.2s;
    -moz-transition: opacity 0.2s;
    -o-transition: opacity 0.2s;
    transition: opacity 0.2s;
}
.pg-section:hover .pg-edit-tools, .pg-section:focus .pg-edit-tools {
    filter: progid:DXImageTransform.Microsoft.Alpha(Opacity=100);
    opacity: 1;
}
.pg-section .pg-edit-btn{
    font-weight: bold;
    border-width: 1px;
    border-style: solid;
    cursor: pointer;
    width: auto;
    padding: 0 10px;
    height: 20px;
    line-height: 20px;
    -webkit-box-sizing: border-box;
    -moz-box-sizing: border-box;
    box-sizing: border-box;
    font-size: 12px;
    background-color: #f2f2f2;
    border-color: #a7a7a7;
    filter: progid:DXImageTransform.Microsoft.gradient(gradientType=0, startColorstr='#FFF2F2F2', endColorstr='#FFD1D1D1');
    display: -moz-inline-stack;
    display: inline-block;
    vertical-align: middle;
    zoom: 1;
    margin-left: 5px;
    padding-top: 1px;
    vertical-align: top;
    color: #666;
    border: 0;
    text-shadow: none;
    box-shadow: none;
    border-radius: 0;
    outline: none;
}
.pg-section .pg-edit-add {
    font-size: 12px;
}
.pg-entity-control-field {
    position: relative;
    display: table;
    margin: 0;
}
.pg-field {
    position: relative;
    display: table;
    cursor: pointer;
}
.pg-main-header-field {
    font: 11px 'montserratsemi_bold', sans-serif;
    line-height: 12px;
    color: #61b3de;
    margin: 0 0 0px;
}
.pg-entity:hover .pg-edit-field-button {
    filter: progid:DXImageTransform.Microsoft.Alpha(Opacity=100);
    opacity: 1;
}
.pg-sub-header-field {
    font: 10px 'montserratregular', sans-serif;
    color: #a8bfcd;
    margin: 0px;
}
.pg-edit-field-button{
    padding-left: 0px;
    padding-right: 0px;
    margin-left: 8px;
    height: 16px;
    width: 19px;
    line-height: 15px;
    border: 0;
    color: #505e69;
    background: transparent;
    opacity: 0;
    -webkit-transition: opacity 0.2s;
    -moz-transition: opacity 0.2s;
    -o-transition: opacity 0.2s;
    transition: opacity 0.2s;
}
.pg-main-header-field:hover .pg-edit-field-button{
    filter: progid:DXImageTransform.Microsoft.Alpha(Opacity=100);
    opacity: 1;
}
.pg-sub-header-field:hover .pg-edit-field-button{
    filter: progid:DXImageTransform.Microsoft.Alpha(Opacity=100);
    opacity: 1;
}
.pg-date-area{
    font: 10px 'montserratregular', sans-serif;
    color: #a8bfcd;
    margin: 0 0 10px;
}
.pg-description{
    font: 11px 'montserratsemi_bold', sans-serif;
    color: #2d5164;
    margin: 0 0 15px;
}
.pg-activities{
    font: 11px 'montserratsemi_bold', sans-serif;
    color: #2d5164;
    margin: 0 0 0px;
}
.pg-date-area:hover .pg-edit-field{
    filter: progid:DXImageTransform.Microsoft.Alpha(Opacity=100);
    opacity: 1;
}
.pg-description:hover .pg-edit-field{
    filter: progid:DXImageTransform.Microsoft.Alpha(Opacity=100);
    opacity: 1;
}
.pg-activities:hover .pg-edit-field{
    filter: progid:DXImageTransform.Microsoft.Alpha(Opacity=100);
    opacity: 1;
}
.pg-edit-field:hover{
    color: #61b3de;
}
button.addEduInfo{
    text-indent: 0;
    width: auto;
    font-size: 12px;
    line-height: 17px;
    color: #333;
    font-weight: normal;
    margin: 0;
    background: none;
    border: none;
    padding: 0;
    -webkit-appearance: none;
    -moz-appearance: none;
    appearance: none;
    color: #006fa6;
    display: block;
}
/** education form **/
.form-area{
    background: #f4f4f4;
    padding: 10px;
    position: relative;;
    z-index: 100;
    width: 100%;
}
.workPeriodSelect{
	display: inline-block;
	width: 36%;
}
.form-area label,
.datePicker .col-xs-5 p{
    font: 11px 'montserratsemi_bold', sans-serif;
}
.form-area .datePicker .col-xs-5{
	padding: 0;
	float: none;
	width: 100%;
}
.datePicker .col-xs-5 .pgs-sign-select{
	margin: 0;
	background-color: #fff;
}
.pg-custom-input,
.react-autosuggest__container .react-autosuggest__input{
    font: 11px 'montserratsemi_bold', sans-serif;
    height: 23px;
    padding: 0px 6px;
    border-radius: 0px;
}
.pg-dropdown{
	width: 45%;
	display: inline;
}
.workPeriodSelect{
	overflow: hidden;
}
/* ... */

